Bug #350874 --> status feedback object was not registering as a web progress listener on the message pane docshell because it was getting set before nsMsgWindow was initialized with a dom window.

sr=bienvenu