mail/base/content/FilterListDialog.js
@@ -109,8 +109,8 @@ const nsMsgFilterMotion = Components.interfaces.nsMsgFilterMotion;
 function onLoad()
 {
     gFilterListMsgWindow = Components.classes["@mozilla.org/messenger/msgwindow;1"].createInstance(Components.interfaces.nsIMsgWindow);
+    gFilterListMsgWindow.domWindow = window;    
     gFilterListMsgWindow.statusFeedback = gStatusFeedback;
-    gFilterListMsgWindow.domWindow = window;
 
     gFilterBundle = document.getElementById("bundle_filter");
     gFilterTree = document.getElementById("filterTree");
